# prayer_time_api

./: .gitignore  README.md
backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/src/app/: main.py
backend/src/app/api/routes/: times.py
backend/src/app/core/: config.py
backend/src/app/services/: prayer_time_service.py
backend/src/prayer_times/: main.py  schemas.py
backend/src/prayer_times/api/routes/: times.py
backend/src/prayer_times/core/: config.py  rate_limit.py
backend/src/prayer_times/services/: prayer_time_service.py
backend/tests/: conftest.py  test_rate_limit.py  test_routes.py
